<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmitry.audioplayer.PlayListFragment">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"
        android:id="@+id/btn_change"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#4d2605" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/audioList"
        android:layout_below="@+id/btn_change"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:background="#a46900" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:background="#871400">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_song_title"
                android:id="@+id/tvSongTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_artist"
                android:id="@+id/tvArtist"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_album"
                android:id="@+id/tvAlbum"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:id="@+id/btn_previous"
                android:src="@mipmap/ic_previous"
                android:contentDescription="@string/tv_btn_previous" />

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:id="@+id/btn_play_and_pause"
                android:src="@mipmap/ic_pause"
                android:contentDescription="@string/text_btn_play_and_pause"
                android:layout_gravity="top" />

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:id="@+id/btn_stop"
                android:src="@mipmap/ic_stop"
                android:contentDescription="@string/text_btn_stop" />

            <ImageButton
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:id="@+id/btn_next"
                android:src="@mipmap/ic_next"
                android:contentDescription="@string/text_btn_next"
                android:layout_gravity="top" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time_played"
                android:id="@+id/tvTimePlayed"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_total_running_time"
                android:id="@+id/tvTotalRunningTime"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#440a00" />

    </LinearLayout>

</RelativeLayout>
