<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:background="@color/player">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSongTitle"
                android:layout_gravity="center_horizontal"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvArtist"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAlbum"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_previous"
                android:src="@mipmap/ic_previous"
                android:contentDescription="@string/tv_btn_previous"
                android:background="@drawable/buttons_for_player" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_play_and_pause"
                android:src="@mipmap/ic_pause"
                android:contentDescription="@string/text_btn_play_and_pause"
                android:transitionName="on"
                android:layout_gravity="top"
                android:nestedScrollingEnabled="false"
                android:background="@drawable/buttons_for_player"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="30dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_stop"
                android:src="@mipmap/ic_stop"
                android:contentDescription="@string/text_btn_stop"
                android:background="@drawable/buttons_for_player"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next"
                android:src="@mipmap/ic_next"
                android:contentDescription="@string/text_btn_next"
                android:layout_gravity="top"
                android:background="@drawable/buttons_for_player" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time_played"
                android:id="@+id/tvTimePlayed"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_total_running_time"
                android:id="@+id/tvTotalRunningTime"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>